manifests/ingress/nginx-controller.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
